syntax = "proto3";

package events.v1;

option go_package = "voicehelper/api/proto/events/v1;eventsv1";

import "google/protobuf/timestamp.proto";

// ConversationCreatedPayload 对话创建事件
message ConversationCreatedPayload {
  string conversation_id = 1;
  string tenant_id = 2;
  string user_id = 3;
  string channel = 4;  // web, mobile, api, voice
  string mode = 5;     // text, voice, multimodal
  google.protobuf.Timestamp created_at = 6;
}

// MessageSentPayload 消息发送事件
message MessageSentPayload {
  string message_id = 1;
  string conversation_id = 2;
  string tenant_id = 3;
  string user_id = 4;
  string role = 5;      // user, assistant, system
  string content = 6;
  string content_type = 7;  // text, audio, image
  int32 tokens = 8;
  google.protobuf.Timestamp timestamp = 9;

  // 扩展字段
  MessageMetadata metadata = 10;
}

// MessageReceivedPayload 消息接收事件
message MessageReceivedPayload {
  string message_id = 1;
  string conversation_id = 2;
  string tenant_id = 3;
  string user_id = 4;
  string content = 5;
  string content_type = 6;
  google.protobuf.Timestamp timestamp = 7;
}

// ConversationCompletedPayload 对话完成事件
message ConversationCompletedPayload {
  string conversation_id = 1;
  string tenant_id = 2;
  string user_id = 3;
  int32 message_count = 4;
  int32 total_tokens = 5;
  int64 duration_ms = 6;
  string completion_reason = 7;  // user_ended, timeout, error, max_turns
  google.protobuf.Timestamp completed_at = 8;
}

// ConversationFailedPayload 对话失败事件
message ConversationFailedPayload {
  string conversation_id = 1;
  string tenant_id = 2;
  string user_id = 3;
  string error_code = 4;
  string error_message = 5;
  string stack_trace = 6;
  google.protobuf.Timestamp failed_at = 7;
}

// MessageMetadata 消息元数据
message MessageMetadata {
  // 模型信息
  string model = 1;
  string model_version = 2;

  // 性能指标
  int64 latency_ms = 3;
  int32 input_tokens = 4;
  int32 output_tokens = 5;

  // 成本
  double cost_usd = 6;

  // 工具调用
  repeated ToolCall tool_calls = 7;

  // 检索结果
  repeated RetrievalResult retrieval_results = 8;
}

// ToolCall 工具调用
message ToolCall {
  string tool_name = 1;
  string tool_args = 2;  // JSON string
  string tool_result = 3;
  bool success = 4;
  int64 execution_time_ms = 5;
}

// RetrievalResult 检索结果
message RetrievalResult {
  string document_id = 1;
  string chunk_id = 2;
  string content = 3;
  double score = 4;
  string retrieval_method = 5;  // vector, bm25, graph
}

// ContextUpdatedPayload 上下文更新事件
message ContextUpdatedPayload {
  string conversation_id = 1;
  string tenant_id = 2;
  int32 context_length = 3;
  int32 max_context_length = 4;
  bool truncated = 5;
  google.protobuf.Timestamp updated_at = 6;
}
